--- a/packages/eslint-config-eslint/default.yml
+++ b/packages/eslint-config-eslint/default.yml
@@ -60,7 +60,6 @@ rules:
     no-confusing-arrow: "error"
     no-console: "error"
     no-delete-var: "error"
-    no-else-return: ["error", { allowElseIf: false }]
     no-eval: "error"
     no-extend-native: "error"
     no-extra-bind: "error"
@@ -124,6 +123,7 @@ rules:
     no-useless-computed-key: "error"
     no-useless-concat: "error"
     no-useless-constructor: "error"
+    no-useless-else: ["error", { allowElseIf: false }]
     no-useless-escape: "error"
     no-useless-rename: "error"
     no-useless-return: "error"
